--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   </script>
 
   <!-- <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script> -->
-  <!-- <script src="dist/cartodb.min.js"></script> -->
-  <script src="dist/cartodb.uncompressed.js"></script>
+  <script src="dist/cartodb.min.js"></script>
+  <!-- <script src="dist/cartodb.uncompressed.js"></script> -->
   <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
