--- a/geocoding.html
+++ b/geocoding.html
@@ -16,12 +16,12 @@
 <body>
   <div id="map">
     <div class="gcTabs">
-      <div class="gcTab js-gcTab selected" data-type="country">Country</div>
-      <div class="gcTab js-gcTab" data-type="region">Administrative regions</div>
-      <div class="gcTab js-gcTab" data-type="city">City</div>
-      <div class="gcTab js-gcTab" data-type="postal_code">Postal codes</div>
-      <div class="gcTab js-gcTab" data-type="ip">IPs</div>
-      <div class="gcTab js-gcTab" data-type="street">Street-level</div>
+      <div class="gcTab js-gcTab selected" data-type="country"><span class="lbl">Country</span><span class="refresh-icon"></span></div><div
+      class="gcTab js-gcTab" data-type="region"><span class="lbl">Administrative regions</span><span class="refresh-icon"></span></div><div
+      class="gcTab js-gcTab" data-type="city"><span class="lbl">City</span><span class="refresh-icon"></span></div><div
+      class="gcTab js-gcTab" data-type="postal_code"><span class="lbl">Postal codes</span><span class="refresh-icon"></span></div><div
+      class="gcTab js-gcTab" data-type="ip"><span class="lbl">IPs</span><span class="refresh-icon"></span></div><div
+      class="gcTab js-gcTab" data-type="street"><span class="lbl">Street-level</span><span class="refresh-icon"></span></div>
     </div>
 
   </div>
